# tailwag-web-service

./: .gitignore  Cargo.toml
examples/: auth.rs  events.rs  form.html  image_upload.rs  middleware.rs  shop.rs
examples/shop/: main.rs  product.rs  stripe_integration.rs
src/: lib.rs
src/application/: application copy.rs  application.rs  application_definition.rs  exp__multitype_application.rs  exp_multitype_application.rs  mod.rs  rest_web_service.rs  static_files.rs  webhook.rs  welcome.md
src/application/http/: headers.rs  into_route_handler.rs  mod.rs  multipart.rs  request.rs  response.rs  route.rs  routes.rs  state.rs
src/application/middleware/: afterware.rs  beforeware.rs  cors.rs  mod.rs
src/application/routes/: mod.rs
src/application/stats/: mod.rs
src/application/threads/: mod.rs
src/application/web_service/: axum_runner.rs  mod.rs
src/auth/: filter_helper.rs  gateway.rs  mod.rs
src/components/: mod.rs
src/enums/: mod.rs
src/errors/: mod.rs
src/extras/: email_alerts.rs  image_upload.rs  mod.rs
src/middleware/: gateway.rs  mod.rs
src/tasks/: mod.rs  runner.rs
src/traits/: rest_api.rs
tests/: child_data_types.hurl  child_data_types.rs  integration_tests.rs  login_register_work.hurl
