[package]
name = "tailwag_web_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# `tailwag` has the whole suite packaged together - not using it here though since this rolls up to tailwag.
# tailwag = { version = "0.1.0", path = "../", features = ["macros", "default"] }
# tailwag_macros = { version = "0.1.0", path = "../macros" }
tailwag_orm = { version = "0.1.0", path = "../orm" }
tailwag_utils = { version = "0.1.0", path = "../utils" }
tailwag_macros = { version = "0.1.0", path = "../macros", features = ["orm"] }


# Error Handling Ergonomics
anyhow = "1.0.72"
thiserror = "1.0.48"

# Logging
env_logger = "0.10.0"
log = "0.4.20"
dotenv = "0.15.0"

# Useful Types
chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
regex = "1.9.3"

# Web Accessibility
reqwest = { version = "0.11.18", features = ["tokio-rustls", "serde_json"] }

# Web Frameworks (Pick one)
axum = { version = "0.6.19", features = ["macros"] }
# actix-web = { version = "4.4.0", features = ["rustls"] }

# Threading / Async
hyper = "0.14.27"
tokio = { version = "1.29.1", features = [
    "macros",
    "rt-multi-thread",
    "tracing",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

# Database (Postgres) - Not sure it's worth supporting non-postgres (relational) DBs? Maybe sqlite
sqlx = { version = "0.7.1", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
] }
tower-http = { version = "0.4.4", features = ["cors"] }
tailwag_forms = { version = "0.1.0", path = "../forms" }

[features]
default = ["development"]
axum = []
release = []
development = []
